[gd_scene load_steps=11 format=3 uid="uid://yejjov5xlpmn"]

[ext_resource type="Script" path="res://scripts/UnitController.gd" id="1_spfd5"]
[ext_resource type="Shader" path="res://unit_outline.gdshader" id="2_muytr"]
[ext_resource type="Texture2D" uid="uid://3tn7wru26rir" path="res://assets/unit.png" id="3_ovam5"]
[ext_resource type="Texture2D" uid="uid://dsey6ufxmgge7" path="res://assets/healthbarUnder.png" id="4_1os00"]
[ext_resource type="Script" path="res://scripts/HealthBar.gd" id="4_qhvow"]
[ext_resource type="Texture2D" uid="uid://br5wpyegfcpl8" path="res://assets/healthbarProgress.png" id="5_qsxrq"]

[sub_resource type="CircleShape2D" id="CircleShape2D_yup00"]
radius = 60.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0w7ku"]
resource_local_to_scene = true
shader = ExtResource("2_muytr")
shader_parameter/width = 0.0
shader_parameter/outline_color = Color(1, 0.568627, 0, 1)

[sub_resource type="CircleShape2D" id="CircleShape2D_ujsdm"]
radius = 15.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_fkf1d"]
properties/0/path = NodePath(".:health")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Sprite:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath(".:position")
properties/2/spawn = true
properties/2/replication_mode = 1

[node name="Unit" type="CharacterBody2D"]
z_index = 10
scale = Vector2(0.3, 0.3)
collision_layer = 3
collision_mask = 13
script = ExtResource("1_spfd5")
speed = 70

[node name="AttackRange" type="Area2D" parent="."]
collision_layer = 8

[node name="CircleCollisionShape2D" type="CollisionShape2D" parent="AttackRange"]
shape = SubResource("CircleShape2D_yup00")

[node name="Sprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_0w7ku")
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_ovam5")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_ujsdm")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_fkf1d")

[node name="AttackCooldown" type="Timer" parent="."]

[node name="HealthBar" type="TextureProgressBar" parent="." node_paths=PackedStringArray("unit")]
visible = false
offset_left = -32.0
offset_top = -31.0
offset_right = 32.0
offset_bottom = -21.0
texture_under = ExtResource("4_1os00")
texture_progress = ExtResource("5_qsxrq")
script = ExtResource("4_qhvow")
unit = NodePath("..")

[connection signal="timeout" from="AttackCooldown" to="." method="_on_attack_cooldown_timeout"]
